Analyze performance implemented

--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -505,18 +505,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[loading] 30.jpeg\n",
-      "[loading] stop_sign.jpeg\n",
-      "[loading] 60.jpeg\n",
-      "[loading] yield.jpeg\n",
-      "[loading] 70.jpeg\n"
+      "[loading] Stop\n",
+      "[loading] Yield\n",
+      "[loading] Speed limit (60km/h)\n",
+      "[loading] Speed limit (70km/h)\n",
+      "[loading] Speed limit (30km/h)\n"
      ]
     }
    ],
@@ -528,9 +528,9 @@
     "test_input = []\n",
     "test_labels = []\n",
     "for test_file in os.listdir(TEST_DIR):\n",
-    "    print(\"[loading]\",test_file)\n",
+    "    print(\"[loading]\",LABELS[int(test_file.split('.')[0])][1])\n",
     "    test_input.append(cv2.resize( cv2.imread(os.path.join(TEST_DIR,test_file)) , (32,32)))\n",
-    "    test_labels.append(test_file)"
+    "    test_labels.append(LABELS[int(test_file.split('.')[0])][1])"
    ]
   },
   {
@@ -577,14 +577,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 134,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "predicted                       | actual\n",
+      "--------------------------------------------------------------------------------\n",
+      "Speed limit (50km/h)            | Stop\n",
+      "Speed limit (50km/h)            | Yield\n",
+      "Speed limit (50km/h)            | Speed limit (60km/h)\n",
+      "Speed limit (50km/h)            | Speed limit (70km/h)\n",
+      "Speed limit (50km/h)            | Speed limit (30km/h)\n",
+      "[accuracy] {} 0.0\n"
+     ]
+    }
+   ],
    "source": [
     "### Calculate the accuracy for these 5 new images. \n",
     "### For example, if the model predicted 1 out of 5 signs correctly, it's 20% accurate on these new images.\n",
-    "# for res in result:\n",
-    "#     print(res,proba[1])\n"
+    "hits = 0\n",
+    "BUFF_SIZE = 60\n",
+    "print('predicted',' '*(int(BUFF_SIZE/2)-len('predicted')),'|','actual' )\n",
+    "print('-'*80)\n",
+    "for idx,res in enumerate(result):\n",
+    "    if res[1] == test_labels[idx]: hits +=1\n",
+    "    print(res[1],' '*(int(BUFF_SIZE/2)-len(res[1])),'|',test_labels[idx])\n",
+    "\n",
+    "print('[accuracy] {}',format(hits/len(result)))"
    ]
   },
   {
