write_up updated

--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -97,6 +97,7 @@
       "-----------------------------------------------------------------\n",
       " Number of training examples              | 34799\n",
       " Number of testing examples               | 12630\n",
+      " Number of validation examples            | 4410\n",
       " Image data shape                         | (34799, 32, 32, 3)\n",
       " Number of classes                        | 43\n"
      ]
@@ -129,6 +130,7 @@
     "print('-'*(buffer_size+25))\n",
     "pprint(\" Number of training examples \", n_train)\n",
     "pprint(\" Number of testing examples \", n_test)\n",
+    "pprint(\" Number of validation examples \", n_validation)\n",
     "pprint(\" Image data shape \", image_shape)\n",
     "pprint(\" Number of classes \", n_classes)\n",
     "\n",
